bk_ida/sjengida/g0/is_attacked
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/is_attacked/src/attacks.c:648:6: error: use of undeclared identifier 'bishop_o_5'
v3 = bishop_o_5[i]; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/is_attacked/src/attacks.c:667:12: error: use of undeclared identifier 'knight_o_4'
if ( board[knight_o_4[j] + square] == 3 ) 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/is_attacked/src/attacks.c:672:6: error: use of undeclared identifier 'rook_o_3'
v9 = rook_o_3[k]; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/is_attacked/src/attacks.c:693:7: error: use of undeclared identifier 'bishop_o_5'
v13 = bishop_o_5[m]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/is_attacked/src/attacks.c:712:12: error: use of undeclared identifier 'knight_o_4'
if ( board[knight_o_4[n] + square] == 4 ) 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/is_attacked/src/attacks.c:717:7: error: use of undeclared identifier 'rook_o_3'
v18 = rook_o_3[ii] + square; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/is_attacked/src/attacks.c:727:8: error: use of undeclared identifier 'rook_o_3'
v18 += rook_o_3[ii]; 
       ^
7 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/is_attacked/src/obj/attacks.o] Error 1
